Translation from Chinese to English

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
-<a href="tail">tail页面</a>
-<a href="top">top页面</a>
-<a href="ps_aux">watch ps aux页面</a>
+<a href="tail">tail page</a>
+<a href="top">top page</a>
+<a href="ps_aux">watch ps aux page</a>
 </body>
 </html>
